--- a/bootstrap_website/index.html
+++ b/bootstrap_website/index.html
@@ -42,19 +42,13 @@
               <a class="nav-link js-scroll-trigger" href="#first">Gun Statistics Around the World</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#question">Our Question</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#second">Gun Laws and Death Rate By State</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#services">Explanation of Laws</a>
+            <a class="nav-link js-scroll-trigger" href="#third">Sources of Firearms</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#portfolio">Gun Sales By State</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">Conclusion</a>
+            <a class="nav-link js-scroll-trigger" href="#conclusion">Conclusion</a>
           </li>
         </ul>
       </div>
@@ -122,20 +116,7 @@
       </div>
   </section>
 
-   <!-- Question Section -->
-   <section class = "page-section bg-primary" id = "question">
-      <div class="container">
-         <div class="row justify-content-center">
-          <div class="col-lg-8 text-center">
-            <h2 class="text-uppercase text-white mt-0">Does the amount of gun laws affect each state?</h2>
-            <hr class="divider light my-4">
-            <a class="btn btn-light btn-xl js-scroll-trigger" href="#second">Lets Explore!</a>
-          </div>
-        </div>
-      </div>
-    </section>
-
-  <!-- About Section -->
+  <!-- Second -->
   <section class="page-section bg-dark" id="second">
     <div class="container">
         <div class="row justify-content-center"> 
@@ -146,73 +127,25 @@
     </div>
   </section>
 
-  <!-- Services Section -->
-  <section class="page-section" id="services">
+  <!-- Third -->
+  <section class="page-section" id="third">
     <div class="container">
         <div class="row justify-content-center">
         
     <!-- Third Chart Here-->
-    <div class='tableauPlaceholder' id='viz1575710872786' style='position: relative'>
-        <noscript>
-          <a href='#'><img alt=' '
-            src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ha&#47;HandgunLawsbyState&#47;Dashboard2&#47;1_rss.png'
-            style='border: none' /></a>
-        </noscript>
-        <object class='tableauViz'  style='display:none;'>
-        <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
-        <param name='embed_code_version' value='3' />
-        <param name='site_root' value='' />
-        <param name='name' value='HandgunLawsbyState&#47;Dashboard2' />
-        <param name='tabs' value='no' />
-        <param name='toolbar' value='yes' />
-        <param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ha&#47;HandgunLawsbyState&#47;Dashboard2&#47;1.png' />
-        <param name='animate_transition' value='yes' />
-        <param name='display_static_image' value='yes' />
-        <param name='display_spinner' value='yes' />
-        <param name='display_overlay' value='yes' />
-        <param name='display_count' value='yes' />
-        <param name='filter' value='publish=yes' />
-      </object></div>               
-      <script type='text/javascript'>                  
-      var divElement = document.getElementById('viz1575710872786');                   
-      var vizElement = divElement.getElementsByTagName('object')[0];                   
-      if ( divElement.offsetWidth > 800 ) {
-        vizElement.style.width='800px';vizElement.style.height='827px';}
-      else if ( divElement.offsetWidth > 500 ) {
-        vizElement.style.width='800px';vizElement.style.height='827px';}
-      else { vizElement.style.width='100%';vizElement.style.height='727px';}                    
-      var scriptElement = document.createElement('script');                   
-      scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                   
-      vizElement.parentNode.insertBefore(scriptElement, vizElement);               
-      </script>
- 
+    <div class='tableauPlaceholder' id='viz1575771888336' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ma&#47;MarylandGunExplore&#47;Dashboard1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='MarylandGunExplore&#47;Dashboard1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ma&#47;MarylandGunExplore&#47;Dashboard1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1575771888336');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} else { vizElement.style.width='100%';vizElement.style.height='727px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
     <!-- End of Third Chart-->
           
         </div>
     </div>
   </section>
 
-  <!-- Portfolio Section -->
-  <section class="page-section bg-primary" id="portfolio">
-      <div class="container">
-          <div class="row justify-content-center">
-            <div class="col-lg-8 text-center">
-                <h2 class="text-white mt-0">TEMP</h2>
-              <!-- Fourth Chart Here-->
-              <!-- End of Fourth Chart-->
-            </div>
-          </div>
-    </div>
-  </section>
 
-
-  <!-- Contact Section -->
-  <section class="page-section bg-dark" id="contact">
+  <!-- Conclusion -->
+  <section class="page-section bg-dark" id="conclusion">
     <div class="container">
       <div class="row justify-content-center">
-        <div class="col-lg-8 text-center">
-            <h2 class="text-white mt-0">CONCLUSION</h2>
-        </div>
+          <div class='tableauPlaceholder' id='viz1575772720563' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ta&#47;TableandQuadrant&#47;gun_law_violence_overview&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='TableandQuadrant&#47;gun_law_violence_overview' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ta&#47;TableandQuadrant&#47;gun_law_violence_overview&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1575772720563');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='800px';vizElement.style.height='827px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='800px';vizElement.style.height='827px';} else { vizElement.style.width='100%';vizElement.style.height='777px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
       </div>
     </div>
   </section>
